--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,10 +1,10 @@
 # Use the redhattraining/httpd-parent image as base
-FROM quay.io/redhattraining/httpd-parent
 
 # Change the port to 8080
 EXPOSE 8080
 
 # Labels consumed by OpenShift
+LABEL io.openshift.expose-services="8080:http"
 LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" \
       io.k8s.display-name="Apache HTTP Server" \
       io.openshift.expose-services="8080:http" \
